[2.7] properly free memory in pgen. (GH-7869) (closes bpo-27780

(cherry picked from commit 9ac11a752a19c3b8607582a3d5ccb615c467124b)

Co-authored-by: Benjamin Peterson <benjamin@python.org>